--- a/src/components/NavBar/navbar.css
+++ b/src/components/NavBar/navbar.css
@@ -27,7 +27,9 @@
 }
 .nav-item:hover {
   background-color: #08445c;
+  color: antiquewhite;
 }
 .active {
   background-color: #08445c;
+  color: antiquewhite;
 }
